--- a/snippets/footer-index2.liquid
+++ b/snippets/footer-index2.liquid
@@ -95,8 +95,25 @@
       
       <hr />
 
-      <p class="no-margin">© 2016 Fello Eyewear &nbsp | &nbsp Santa Barbara, CA</p>
-      
+      <p class="no-margin pull-left">© 2016 Fello Eyewear &nbsp | &nbsp Santa Barbara, CA</p>
+
+      <p class="no-margin pull-right hidden-xs">
+        <a href="/pages/photographer-credits" title="Photo Credits">
+          VOSH Retreat Photos
+        </a> by
+        <a href="jeffreycowan.com" title="Jeff Cowan Editor | Documentary Filmmaker">
+          Jeff Cowan
+        </a>
+      </p>
+      <p class="no-margin pull-right visible-xs">
+        <a href="/pages/photographer-credits" title="Photo Credits">
+          VOSH Retreat Photos
+        </a> by
+        <a href="jeffreycowan.com" title="Jeff Cowan Editor | Documentary Filmmaker">
+          Jeff Cowan
+        </a>
+      </p>
+
     </div>
   </div>
   
