--- a/snippets/header-stylesheets.liquid
+++ b/snippets/header-stylesheets.liquid
@@ -10,7 +10,7 @@
     loadCSS("{{ 'animate.css' | asset_url }}");
     loadCSS("{{ 'sweetalert.css' | asset_url }}");
     loadCSS("{{ 'jquery-ui.min.css' | asset_url }}");
-    loadCSS("{{ 'font-awesome.min.css' | asset_url }}");
+//     loadCSS("{{ 'font-awesome.min.css' | asset_url }}");
     loadCSS("{{ 'owl.carousel.css' | asset_url }}");
     loadCSS("{{ 'chosen.css' | asset_url }}");
     loadCSS("{{ 'lightbox.min.css' | asset_url }}");
