--- a/snippets/settings-box.liquid
+++ b/snippets/settings-box.liquid
@@ -1,7 +1,7 @@
 
 <div class="box-settings">
   {% if settings.icon_settings == "bars" %}
-  <span class="icon pe-7s-config"></span>
+  <span class="icon pe-7s-user"></span>
   {% else %}
   <span class="icon bar">
     <span></span>
