--- a/templates/page.about.liquid
+++ b/templates/page.about.liquid
@@ -15,13 +15,13 @@
   <h5 class="text-center">
     Today there are nearly 1 Billion people worldwide without access to basic eye care (eye exams, prescription lenses, eye drops, etc.). We aren’t okay with these numbers, and we know that you aren’t either.
   </h5>
-  <img src="//cdn.shopify.com/s/files/1/1321/8937/t/20/assets/fello_vision.png" alt="Fello and Vosh around the World" />
+  <img src="{{ 'fello_vision.png' | asset_url }}" alt="Fello and Vosh around the World" />
 </div>
 
 <!-- Start Founded / L-MD Screens -->
 <div class="row row-eq-height founded hidden-sm hidden-xs">
   <div class="col-md-6 no-pads pull-left">
-    <img class="full-w" src="{{ 'founders.jpg' | asset_url }}" alt="{{ 'Fello Founders: Jonathan, Jason, Sasha' | escape }}" />
+     <img class="full-w" src="{{ 'fello_friends.jpg' | asset_url }}" alt="{{ 'Fello Friends' | escape }}" />
   </div>
   <div class="col-md-6 v-center no-pads">
     <img src="{{ 'fello_circle.png' | asset_url }}" alt="{{ 'vosh international' | escape }}" style="width: 20%;"/>
@@ -39,7 +39,7 @@
 </div>
 <div class="row founded hidden-lg hidden-md no-pads">
   <div class="col-xs-12">
-    <img class="full-w" src="{{ 'founders.jpg' | asset_url }}" alt="{{ 'Fello Founders: Jonathan, Jason, Sasha' | escape }}" />
+    <img class="full-w" src="{{ 'fello_friends.jpg' | asset_url }}" alt="{{ 'Fello Friends' | escape }}" />
   </div>
 </div>
 <!-- End Founded / S-XS Screens -->
