--- a/templates/page.charity.liquid
+++ b/templates/page.charity.liquid
@@ -122,7 +122,7 @@
 <!-- Start Charity Tiles / Large Screens -->
   <div class="row row-eq-height hidden-md hidden-sm hidden-xs tile">
     <div class="full-h col-md-6">
-      <img src="{{ 'char.jpg' | asset_url }}" alt="{{ 'Fello at an eye care clinic.' | escape }}" />
+      <img class="full-w" src="{{ 'founders.jpg' | asset_url }}" alt="{{ 'Fello at an eye care clinic.' | escape }}" />
     </div>
     <div class="col-md-6 tile vosh v-center">
       <a href="http://www.vosh.org" target="_blank" title="VOSH International"><img src="{{ 'vosh_logo.png' | asset_url }}" alt="{{ 'vosh international' | escape }}" style="width: 30%;"/></a>
@@ -141,7 +141,7 @@
   <div class="row hidden-lg tile">
     <div class="full-h col-xs-12">
       <!-- STYLE HACK -->
-      <img style="margin-bottom: -1px;" src="{{ 'char.jpg' | asset_url }}" alt="{{ 'Fello at an eye care clinic.' | escape }}" />
+      <img class="full-w" ="margin-bottom: -1px;" src="{{ 'founders.jpg' | asset_url }}" alt="{{ 'Fello at an eye care clinic.' | escape }}" />
     </div>
   </div>
 <!-- End Charity Tiles / M-XS Screens -->
