--- a/assets/functions.js.liquid
+++ b/assets/functions.js.liquid
@@ -8,22 +8,22 @@
      Stick menu
      --------------------------------------------- */
      function boutique_stick_menu(){
-      if($('#header .main-menu').length >0){
-        var h = $(window).scrollTop();
-          var width = $(window).width();
-          if(width > 991){
-              if((h > stickyHeaderTop) ){
-                  $('#header-ontop').addClass('on-sticky');
-                  $('#header-ontop').find('.header').addClass('ontop');
-              }else{
-                  $('#header-ontop').removeClass('on-sticky');
-                  $('#header-ontop').find('.header').removeClass('ontop');
-              }
-          }else{
-              $('#header-ontop').find('.header').removeClass('ontop');
-              $('#header-ontop').removeClass('on-sticky');
-          }
-      }
+//       if($('#header .main-menu').length >0){
+//         var h = $(window).scrollTop();
+//           var width = $(window).width();
+//           if(width > 991){
+//               if((h > stickyHeaderTop) ){
+//                   $('#header-ontop').addClass('on-sticky');
+//                   $('#header-ontop').find('.header').addClass('ontop');
+//               }else{
+//                   $('#header-ontop').removeClass('on-sticky');
+//                   $('#header-ontop').find('.header').removeClass('ontop');
+//               }
+//           }else{
+//               $('#header-ontop').find('.header').removeClass('ontop');
+//               $('#header-ontop').removeClass('on-sticky');
+//           }
+//       }
      }
     /* ---------------------------------------------
      Owl carousel
@@ -313,7 +313,7 @@
                 //Open directly via API
                 $.magnificPopup.open({
                   items: {
-                    src: '<div class="white-popup"><div class="kt-popup-newsletter"><div class="popup-title"><h3>BoutiQue</h3><img src="images/arow-popup.png" alt=""><p class="notice">enter your email and get  <span class="primary">25% off</span> YOUR first purchase!</p></div><form class="form-subscribe"><input class="input" placeholder="Your email here" type="text" /><button class="button">NO THANKS!</button><button class="button">Enter</button></form><div class="checkbox"><label><input type="checkbox" value="">Dont show this popup again!</label></div></div></div>',  //can be a HTML string, jQuery object, or CSS selector
+                    src: '<div class="white-popup"><div class="kt-popup-newsletter"><div class="popup-title"><h3>BoutiQue</h3><img src="images/arow-popup.png" alt=""><p class="notice">enter your email and get  <span class="primary">25% off</span> YOUR first purchase!</p></div><form class="form-subscribe"><input class="input" placeholder="Your email here" type="text" /><button class="button">NO THANKS!</button><button class="button">Make A Differnce</button></form><div class="checkbox"><label><input type="checkbox" value="">Dont show this popup again!</label></div></div></div>',  //can be a HTML string, jQuery object, or CSS selector
                     type: 'inline'
                   }
                 });
