--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -18,7 +18,7 @@
   {% assign sold_out = false %}
 {% endif %}
 
-<li class="product-item view-grid {{grid_item_width}}">
+<li class="product-item view-grid {{grid_item_width}}" style="display: list-item;">
   <div class="product-inner">
     <div class="product-thumb has-back-image white-bg">
       
