--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -50,12 +50,19 @@
       </div>
       <div class="col-md-5 col-lg-5 col-sm-12 col-xs-12">
         <div class="product-details-right">
+
+          {% if product.title contains "Collaboration" %}
+          {% else %}
           <h4 class="small-caps"><strong>Free Shipping</strong> anywhere in the United States & Canada.</h4>
+          
+          <hr />
+          {% endif %}
+
           <h3 class="product-name">{{ product.title | upcase }}</h3>
           <div class="rating">
             <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
           </div>
-          <span class="price">
+          <span class="price no-margin">
             {% if on_sale %}
             <ins>{{product.price | money }}</ins>
             <del>{{product.compare_at_price | money }}</del>
@@ -63,14 +70,28 @@
             <ins>{{product.price | money }}</ins>
             {% endif %}
           </span>
-
-          <div class="short-descript">
-            {% if product.metafields.meta.description %}
-            	{{ product.metafields.meta.description | html }}
-            {%else%}
-            	{{ product.description | html }}
+          
+          {% if product.title contains "Collaboration" %}
+            <hr />
+            {{ product.description | html }}
+            <hr />
+            {% else %}
+            {% if template != "index" %}
+            <div id="size-link">
+              <hr>
+              <h2><a href="#tab-1" title="size guide">Size Guide</a></h2>
+            </div>
             {% endif %}
-          </div>  
+
+            <div class="short-descript">
+              {% if product.metafields.meta.description %}
+              {{ product.metafields.meta.description | html }}
+              {%else%}
+              {{ product.description | html }}
+              {% endif %}
+            </div>  
+          {% endif %}
+
           <form action="/cart/add" method="post" enctype="multipart/form-data" id="add-to-cart-form">
 
               <div id="product-variants">
@@ -123,43 +144,63 @@
   </div>
 </div>
 
-<!-- Hide under tabs on the product show page -->
+{% if product.title contains "Collaboration" %}
+{% else %}
 <div class="container">
-  {% if false %}
+
     <div class="tab-details-product style2">
       <ul class="box-tabs nav-tab">
         
-        {% if false %}
-          {% if product.description !="" %}
-            <li><a data-toggle="tab" href="#tab-1">{{settings.product_tab_title_1}}</a></li>
-          {% endif %}
-        {% endif %}
 
-        {% if settings.show_product_tab_2 %}
-          <li class="active"><a data-toggle="tab" href="#tab-2">{{settings.product_tab_title_2}}</a></li>
+            <li class="active"><a data-toggle="tab" href="#tab-1">Size Guide</a></li>
+
+
+
+        {% if false %}
+          <li><a data-toggle="tab" href="#tab-2">{{settings.product_tab_title_2}}</a></li>
         {% endif %}
-        {% if settings.show_product_tab_3 %}
+        {% if false %}
           <li><a data-toggle="tab" href="#tab-3">{{settings.product_tab_title_3}}</a></li>
         {% endif %}
-        {% if settings.show_product_tab_5 %}
+        {% if false %}
           <li><a data-toggle="tab" href="#tab-4">{{settings.product_tab_title_5}}</a></li>
         {% endif %}
       </ul>
       <div class="tab-container">
         
-        {% if false %}
-          {% if product.description !="" %}
-              <div id="tab-1" class="tab-panel">{{ product.description }}</div>
+
+        <!-- Start SM-LG Screens -->
+        <div id="tab-1" class="hidden-xs tab-panel active">
+          {% if product.title contains 'Fantom' %}
+            <img src="{{ 'h_fantom_size_guide.jpg' | asset_url }}" />
+          {% elsif product.title contains 'Konvoy' %}
+            <img src="{{ 'h_konvoy_size_guide.jpg' | asset_url }}" />
+          {% elsif product.title contains 'Heron' %}
+            <img src="{{ 'h_heron_size_guide.jpg' | asset_url }}" />
           {% endif %}
-        {% endif %}
+        </div>
+        <!-- Start SM_LG Screens -->
         
-        {% if settings.product_tab_desc_2 !="" %}
-            <div id="tab-2" class="tab-panel active">{{ settings.product_tab_desc_2 }}</div>
+        <!-- Start XS Screens -->
+        <div id="tab-1" class="visible-xs tab-panel active">
+          {% if product.title contains 'Fantom' %}
+          <img src="{{ 'fantom_size_guide_small.jpg' | asset_url }}" />
+          {% elsif product.title contains 'Konvoy' %}
+          <img src="{{ 'konvoy_size_guide_small.jpg' | asset_url }}" />
+          {% elsif product.title contains 'Heron' %}
+          <img src="{{ 'heron_size_guide_small.jpg' | asset_url }}" />
+          {% endif %}
+        </div>
+        <!-- End XS Screens -->
+
+        
+        {% if false %}
+            <div id="tab-2" class="tab-panel">{{ settings.product_tab_desc_2 }}</div>
         {% endif %}
-        {% if settings.product_tab_desc_3 !="" %}
+        {% if false %}
             <div id="tab-3" class="tab-panel">{{ settings.product_tab_desc_3 }}</div>
         {% endif %}
-        {% if settings.show_product_tab_5 %}
+        {% if false %}
             <div id="tab-4" class="tab-panel">{{ product.metafields.meta.reviews }}
               <div id="shopify-product-reviews" data-id="{{product.id}}">{{ product.metafields.spr.reviews }}
               </div>
@@ -167,9 +208,9 @@
         {% endif %}
       </div>  
     </div>
-  {% endif %}
+
 </div> <!--END CONTAINER-->  
-<!-- End hide under tabs on the product show page -->
+{% endif %}
 
 <script>
   
