--- a/templates/page.customer-care.liquid
+++ b/templates/page.customer-care.liquid
@@ -14,9 +14,9 @@
   <div class="col-xs-12 col-sm-6">
     <h1 class="text-center col-xs-11"><span class="icon highlight pe-7s-refresh"></span>  &nbsp; Returns</h1>
 
-    <div class="panel panel-default col-xs-11 no-pads">
+    <div class="panel sharp panel-default col-xs-11 no-pads">
       <div class="panel-body">
-        <p class="col-xs-12 h5">
+        <p class="col-xs-12 h5 justify">
           We want you to feel comfortable making a purchase online,
           so we provide a 30 day grace period to try on your Fellos
           and decide if they are right for you!
@@ -25,7 +25,7 @@
           as you received them and returned in the original packaging.
         </p>
       </div>
-      <div class="panel-footer text-center"><a href="/pages/policies" title="policies">View Policy</a></div>
+      <div class="panel-footer sharp text-center"><a href="/pages/policies" title="policies">View Policy</a></div>
     </div>
 
   </div>
@@ -34,9 +34,9 @@
     <h1 class="text-center col-xs-11 col-xs-offset-1"><span class="icon highlight pe-7s-refresh-2"></span> &nbsp; Warranty</h1>
 
 
-    <div class="panel panel-default col-xs-11 col-xs-offset-1 no-pads">
+    <div class="panel sharp panel-default col-xs-11 col-xs-offset-1 no-pads">
       <div class="panel-body">
-        <p class="col-xs-12 h5">
+        <p class="col-xs-12 h5 justify">
           Our sunglasses are warranted to the original purchaser
           for one year from the date of purchase against any defect
           in the original materials and craftsmanship.
@@ -45,7 +45,7 @@
           of damage caused by improper or unreasonable use.
         </p>
       </div>
-      <div class="panel-footer text-center"><a href="/pages/policies" title="policies">View Policy</a></div>
+      <div class="panel-footer sharp text-center"><a href="/pages/policies" title="policies">View Policy</a></div>
     </div>
 
 
@@ -59,9 +59,9 @@
   <div class="col-xs-12 col-sm-6">
     <h1 class="text-center">Returns</h1>
 
-    <div class="panel panel-default no-pads">
+    <div class="panel sharp panel-default no-pads">
       <div class="panel-body">
-        <p class="col-xs-12 h5">
+        <p class="col-xs-12 h5 justify">
           You may return your pair(s) for a refund within 30 days of your purchase.  
           To be eligible for a refund must be unused and in the same condition that you received it.
           It must also be in the original packaging.
@@ -82,9 +82,9 @@
     <h1 class="text-center">Exchanges</h1>
 
 
-    <div class="panel panel-default no-pads">
+    <div class="panel sharp panel-default no-pads">
       <div class="panel-body">
-        <p class="col-xs-12 h5">
+        <p class="col-xs-12 h5 justify">
           We replace our sunglasses if they are defective or damaged.
           If you need to exchange it for the same item
           send us an email at contact@felloeyewear.com.
