--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -35,8 +35,8 @@
   </div>
   <div class="row">
     <div class="col-sm-4 col-xs-7 col-xs-offset-1">
-      <h2 class="hidden-xs">Fello <span class="blue">Humanity</span></h2>
-      <h3 class="visible-xs">Fello <span class="blue">Humanity</span></h3>
+      <h2 class="hidden-xs">Fello <span class="orange">Humanity</span></h2>
+      <h3 class="visible-xs">Fello <span class="orange">Humanity</span></h3>
     </div>
   </div>
   
@@ -45,8 +45,7 @@
   </div>
 
   <div class="row">
-    <a href="/collections/all"><button class="cta-btn btn btn-lg col-xs-offset-1 col-sm-3 col-xs-6 hidden-xs">Shop Sunglasses</button></a>
-    <a href="/collections/all"><button class="cta-btn btn btn-sm col-xs-offset-1 col-sm-3 col-xs-6 visible-xs">Shop Sunglasses & Give Back</button></a>
+    <a href="/collections/all"><button class="cta-btn sharp btn btn-lg col-xs-offset-1 col-sm-3 col-xs-6 hidden-xs"><p class="h2">SHOP SUNGLASSES</p></button></a>
   </div>
 </div>
 
@@ -61,7 +60,7 @@
   </div>
 
   <div class="row">
-    <a href="/collections/all"><button class="cta-btn btn col-xs-offset-1 col-sm-3 col-xs-6">Shop Sunglasses</button></a>
+    <a href="/collections/all"><button class="cta-btn sharp btn col-xs-offset-1 col-sm-3 col-xs-6"><span class="h4">SHOP SUNGLASSES</span></button></a>
   </div>
 </div>
 
@@ -70,19 +69,24 @@
 {% if settings.use_banner_carousel_home10 %}
 {% include 'shortcode-banner-slide'  %}
 {% endif %}
-    <div class="no-margin section-pads charity-hp full-w">
+    <div class="no-margin med-v-pads charity-hp full-w minor-h-pads">
       <div class="row">
         <h1 class="text-center">Fight Blindness Together</h1>
       </div>
 
-      <div class="row">
-        <h4 class="hidden-xs col-md-8 col-md-offset-2 minor-h-pads">
+      <div class="hidden-xs row">
+        <br />
+        <h3 class="col-md-8 col-md-offset-2 minor-h-pads justify">
           For every pair of sunglasses sold,
           Fello donates $5 to VOSH.
           You can also accompany us in our pursuit to raise awareness and
           make a difference by contributing <a href="http://www.vosh.org/donate" target="_blank">here</a>.
-        </h4>
-        <p class="visible-xs col-md-8 col-md-offset-2 justify minor-h-pads">
+        </h3>
+        <br />
+      </div>
+
+      <div class="visible-xs row">
+        <p class="col-md-8 col-md-offset-2 justify minor-h-pads">
           For every pair of sunglasses sold,
           Fello donates $5 to VOSH.
           You can also accompany us in our pursuit to raise awareness and
