--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -8,62 +8,58 @@
   {% endif %}
 {% endif %}
 
-<div class="top-pic banner-hp banner-pic jumbotron col-xs-12 no-margin visible-lg">
-  <div class="row">
-    <div class="col-xs-9 col-xs-offset-1">
-      <h1 class="hidden-xs">We Are All Fellos</h1>
-      <h2 class="visible-xs">We Are All Fellos</h2>
-    </div>
-  </div>
-  <div class="row hidden-xs hidden-sm">
-    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
-      <h2 class="hidden-xs">Fello <span class="bright-green">Friends</span></h2>
-      <h3 class="visible-xs">Fello <span class="bright-green">Friends</span></h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-7 col-xs-offset-1 hidden-xs hidden-sm">
-      <h2 class="hidden-xs">Fello <span class="aqua">Travelers</span></h2>
-      <h3 class="visible-xs">Fello <span class="aqua">Travelers</span></h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
-      <h2 class="hidden-xs">Fello <span class="purple">Patrons</span></h2>
-      <h3 class="visible-xs">Fello <span class="purple">Patrons</span></h3>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 col-xs-7 col-xs-offset-1">
-      <h2 class="hidden-xs">Fello <span class="orange">Humanity</span></h2>
-      <h3 class="visible-xs">Fello <span class="orange">Humanity</span></h3>
-    </div>
-  </div>
-  
-  <div class="row">
-    <hr class="col-xs-offset-1 col-sm-4 col-xs-9" />
+<div class="banner-hp banner-pic jumbotron col-xs-12 no-margin">
+
+  <div class="text-center">
+    <h1 class="text-center">We Are All Fellos</h1>
+
+    <span class="h2">Fello <span class="bright-green">Friends </span> &middot; </span>
+
+    <span class="h2">Fello <span class="orange">Travelers </span> &middot; </span>
+
+    <span class="h2">Fello <span class="pink">Patrons </span> &middot; </span>
+
+    <span class="h2">Fello <span class="aqua">Humanity</span></span>
+
+    <hr />
   </div>
 
-  <div class="row">
-    <a href="/collections/all"><button class="cta-btn sharp btn btn-lg col-xs-offset-1 col-sm-3 col-xs-6 hidden-xs"><p class="h2">SHOP SUNGLASSES</p></button></a>
+  <div class="text-center">
+    <a href="/collections/all">
+      <button class="cta-btn sharp btn btn-lg">
+        <p class="h2">SHOP SUNGLASSES</p>
+      </button>
+    </a>
   </div>
+
 </div>
 
-<div class="top-pic banner-hp banner-pic jumbotron col-xs-12 no-margin hidden-lg">
-  <div class="row">
-    <div class="col-xs-6 col-xs-offset-1 no-pads">
-      <h2 class="no-margin">Give the Gift of Vision</h2>
-    </div>
-  </div>
-  <div class="row">
-    <hr class="col-xs-offset-1 col-sm-4 col-xs-9" />
-  </div>
 
-  <div class="row">
-    <a href="/collections/all"><button class="cta-btn sharp btn col-xs-offset-1 col-sm-3 col-xs-6"><span class="h4">SHOP SUNGLASSES</span></button></a>
-  </div>
-</div>
+  	{% include 'header2'  %} <!-- Best Sellers Header -->
 
+{% assign check_even_int = 1| plus :0 %}
+{% for i in (1..10) %}
+  {% assign handle = "handle_product_fw_" | append: i | append: "_home10" %}
+  {% if settings[handle] != blank %}
+
+
+  {% assign check_even_int = check_even_int | plus :1 %}
+  {% if check_even_int == 2 %}
+    {% assign product_full_width_style = "style2" %}
+  {% elsif check_even_int == 3 %}
+    {% assign check_even_int = 1 %}
+    {% assign product_full_width_style = "" %}
+  {% endif %}
+
+  {% assign include ="" %}
+  {% assign product_full_width_handle = settings[handle] %}
+    {% if i == 1 %}
+  	  {% include 'shortcode-product-fullwidth' with "break"  %}
+    {% elsif i == 2 %}
+  	  {% include 'shortcode-product-fullwidth' %}
+    {% endif %}
+  {% endif %}
+{% endfor %}
 
 
 {% if settings.use_banner_carousel_home10 %}
@@ -96,7 +92,7 @@
 
       <div class="row row-eq-height hidden-xs">
         <div class="col-md-3 col-sm-6 col-md-offset-3 v-center">
-          <h1 class="highlight text-right">3014</h1>
+          <h1 class="highlight text-right">3021</h1>
         </div>
 
         <div class="col-md-3 col-sm-6 v-center">
@@ -104,34 +100,9 @@
         </div>
       </div>
       
-      <h1 class="visible-xs text-center"><span class="highlight">3014 </span>&nbsp Lives Changed</h1>
+      <h1 class="visible-xs text-center"><span class="highlight">3021 </span>&nbsp Lives Changed</h1>
     </div>
 
-  	{% include 'header2'  %} <!-- Best Sellers Header -->
-
-{% assign check_even_int = 1| plus :0 %}
-{% for i in (1..10) %}
-  {% assign handle = "handle_product_fw_" | append: i | append: "_home10" %}
-  {% if settings[handle] != blank %}
-
-
-  {% assign check_even_int = check_even_int | plus :1 %}
-  {% if check_even_int == 2 %}
-    {% assign product_full_width_style = "style2" %}
-  {% elsif check_even_int == 3 %}
-    {% assign check_even_int = 1 %}
-    {% assign product_full_width_style = "" %}
-  {% endif %}
-
-  {% assign include ="" %}
-  {% assign product_full_width_handle = settings[handle] %}
-    {% if i == 1 %}
-  	  {% include 'shortcode-product-fullwidth' with "break"  %}
-    {% else %}
-  	  {% include 'shortcode-product-fullwidth' %}
-    {% endif %}
-  {% endif %}
-{% endfor %}
 
   	{% include 'header2' with "Instagram" %}
 
